--- a/index.html
+++ b/index.html
@@ -1,157 +1,72 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="uk">
 <head>
-	<base href="/">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ruslan Yaremko</title>
-	<link rel="icon" href="img/logo.png" />
+    <title>Про мене - Яремко Руслан</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0f8ff; /* Light blue background */
-            color: #000080; /* Dark blue text */
             margin: 0;
+            padding: 0;
+            background-color: #f4f4f9;
+            color: #333;
+        }
+        header, footer {
+            background-color: #333;
+            color: #fff;
+            padding: 10px;
+            text-align: center;
+        }
+        main {
             padding: 20px;
             max-width: 800px;
-            margin: auto;
-            line-height: 1.6;
+            margin: 0 auto;
         }
-
-        header {
-            text-align: center;
-            background-color: #ffdd00; /* Yellow */
-            padding: 20px;
-            border-radius: 10px;
-        }
-
-        header img {
-            max-width: 100px;
-            border-radius: 50%;
-        }
-
         h1 {
-            margin-top: 10px;
-            font-size: 2em;
+            color: #5a67d8;
         }
-
-        .section {
-            margin: 20px 0;
-            padding: 15px;
-            background-color: #ffffff;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        .section h2 {
-            color: #000080;
-        }
-
-        ul {
-            padding-left: 20px;
-        }
-
-        .work-exp, .hobbies {
-            display: flex;
-            justify-content: space-between;
-        }
-
-        .work-exp div, .hobbies div {
-            flex-basis: 45%;
-        }
-
-        footer {
-            text-align: center;
-            margin-top: 20px;
-        }
-
-        .social-links a {
-            margin: 0 10px;
-            color: #000080;
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        .social-links a:hover {
-            text-decoration: underline;
+        section {
+            margin-bottom: 20px;
         }
     </style>
 </head>
-
 <body>
-    <header>
-        <img src="img/avatar.jpg" alt="Ruslan Yaremko">
-        <h1>Ruslan Yaremko</h1>
-        <p>
-            <img src="img/logo.png" alt="University Logo" style="max-width: 150px;">
-        </p>
-        <p>Very active and eager to learn new things, open for challenges.</p>
-    </header>
 
-    <section class="section">
-        <h2>Contact Information</h2>
-        <p>Email: email@example.com</p>
-        <p>Phone: +38 123 456 7890</p>
+<header>
+    <h1>Про мене - Яремко Руслан Олегович</h1>
+</header>
+
+<main>
+    <section>
+        <h2>Про мене</h2>
+        <p>Мене звати Яремко Руслан Олегович, студент групи KN1-B21. Навчаюсь в Кам'янець-Подільському національному університеті імені Івана Огієнка, спеціальність - Комп'ютерні науки. Не люблю сидіти на одному місці, люблю пробувати щось новеньке.</p>
     </section>
 
-    <section class="section">
-        <h2>Education</h2>
-        <p><strong>University:</strong> Kamianets-Podilskyi Ivan Ohiienko National University</p>
-    </section>
-
-    <section class="section">
-        <h2>Work Experience</h2>
-        <div class="work-exp">
-            <div>
-                <h3>Intern at ABC Company</h3>
-                <p>May 2022 - August 2022</p>
-                <p>Worked on a project involving web development and learned to work effectively in a team.</p>
-            </div>
-            <div>
-                <h3>Freelance Web Developer</h3>
-                <p>September 2022 - Present</p>
-                <p>Developed simple websites for local businesses, improved my HTML, CSS, and JavaScript skills.</p>
-            </div>
-        </div>
-    </section>
-
-    <section class="section">
-        <h2>Skills</h2>
+    <section>
+        <h2>Навички</h2>
         <ul>
-            <li>HTML, CSS, JavaScript</li>
-            <li>Problem-solving and adaptability</li>
-            <li>Speaking English and Ukrainian fluently</li>
+            <li>Програмування на мовах: C++, Python</li>
+            <li>Веб-розробка: HTML, CSS</li>
+            <li>Технологія контролю версій: Git</li>
         </ul>
     </section>
 
-    <section class="section">
-        <h2>Hobbies</h2>
-        <div class="hobbies">
-            <div>
-                <h3>Photography</h3>
-                <p>Love capturing landscapes and memorable moments.</p>
-            </div>
-            <div>
-                <h3>Basketball</h3>
-                <p>Playing in a local team, staying active and competitive.</p>
-            </div>
-        </div>
+    <section>
+        <h2>Освіта</h2>
+        <p>2021-2025: Кам'янець-Подільський національний університет імені Івана Огієнка, бакалавр з Комп'ютерних наук.</p>
     </section>
 
-    <section class="section">
-        <h2>References</h2>
-        <p>Available upon request</p>
+    <section>
+        <h2>Контакти</h2>
+        <p>Електронна пошта: <a href="mailto:kn1b21.yaremko@kpnu.edu.ua">kn1b21.yaremko@kpnu.edu.ua</a></p>
+        <p>GitHub: <a href="https://github.com/RuslanYaremko" target="_blank">RuslanYaremko</a></p>
     </section>
+</main>
 
-    <footer>
-        <p>&copy; 2024 Ruslan Yaremko</p>
-        <div class="social-links">
-            <a href="https://www.instagram.com/your_instagram" target="_blank">Instagram</a>
-            <a href="https://github.com/your_github" target="_blank">GitHub</a>
-            <a href="https://www.linkedin.com/in/your_linkedin" target="_blank">LinkedIn</a>
-        </div>
-    </footer>
+<footer>
+    <p>&copy; 2024 Яремко Руслан Олегович</p>
+</footer>
+
 </body>
-
 </html>
