--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <main>
         <section>
             <h2>Про мене</h2>
-            <p>Мене звати Яремко Руслан Олегович, студент групи KN1-B21. Навчаюсь в Кам'янець-Подільському національному університеті імені Івана Огієнка, спеціальність - Комп'ютерні науки. Не люблю сидіти на одному місці, люблю пробувати щось новеньке.</p>
+            <p>Мене звати Яремко Руслан Олегович, студент групи KN1-B21. Навчаюсь в Кам'янець-Подільському національному університеті імені Івана Огієнка, спеціальність - Комп'ютерні науки. Не люблю сидіти на одному місці, люблю працювати з проектми.</p>
         </section>
 
         <section>
