--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
             font-family: 'Arial', sans-serif;
             line-height: 1.6;
             color: #333;
-            background-color: #f0f2f5;
+            background: url('background.jpg') no-repeat center center fixed;
+            background-size: cover;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -23,10 +24,12 @@
         .container {
             width: 90%;
             max-width: 800px;
-            background: #fff;
+            background: rgba(255, 255, 255, 0.9); /* Напівпрозорий фон */
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             overflow: hidden;
+            padding: 20px;
+            margin: 20px;
         }
         header {
             background-color: #4a90e2;
@@ -56,8 +59,18 @@
             color: #555;
         }
         ul {
-            list-style-type: disc;
-            padding-left: 20px;
+            list-style-type: none;
+            padding-left: 0;
+        }
+        ul li {
+            display: flex;
+            align-items: center;
+            margin-bottom: 8px;
+        }
+        ul li img {
+            width: 24px;
+            height: 24px;
+            margin-right: 10px;
         }
         footer {
             background-color: #4a90e2;
@@ -85,15 +98,17 @@
     <main>
         <section>
             <h2>Про мене</h2>
-            <p>Мене звати Яремко Руслан Олегович, студент групи KN1-B21. Навчаюсь в Кам'янець-Подільському національному університеті імені Івана Огієнка, спеціальність - Комп'ютерні науки. Не люблю сидіти на одному місці, люблю працювати з проектми.</p>
+            <p>Мене звати Яремко Руслан Олегович, студент групи KN1-B21. Навчаюсь в Кам'янець-Подільському національному університеті імені Івана Огієнка, спеціальність - Комп'ютерні науки. Не люблю сидіти на одному місці, люблю пробувати щось новеньке.</p>
         </section>
 
         <section>
             <h2>Навички</h2>
             <ul>
-                <li>Програмування на мовах: C++, Python</li>
-                <li>Веб-розробка: HTML, CSS</li>
-                <li>Технологія контролю версій: Git</li>
+                <li><img src="icons/cpp.png" alt="C++">Програмування на C++</li>
+                <li><img src="icons/python.png" alt="Python">Програмування на Python</li>
+                <li><img src="icons/html.png" alt="HTML">Веб-розробка з HTML</li>
+                <li><img src="icons/css.png" alt="CSS">Веб-розробка з CSS</li>
+                <li><img src="icons/git.png" alt="Git">Технологія контролю версій Git</li>
             </ul>
         </section>
 
