--- a/index.html
+++ b/index.html
@@ -67,9 +67,8 @@
             align-items: center;
             margin-bottom: 8px;
         }
-        ul li img {
-            width: 24px;
-            height: 24px;
+        ul li span {
+            font-size: 24px;
             margin-right: 10px;
         }
         footer {
@@ -104,11 +103,11 @@
         <section>
             <h2>Навички</h2>
             <ul>
-                <li><img src="icons/cpp.png" alt="C++">Програмування на C++</li>
-                <li><img src="icons/python.png" alt="Python">Програмування на Python</li>
-                <li><img src="icons/html.png" alt="HTML">Веб-розробка з HTML</li>
-                <li><img src="icons/css.png" alt="CSS">Веб-розробка з CSS</li>
-                <li><img src="icons/git.png" alt="Git">Технологія контролю версій Git</li>
+                <li><span>🔹</span> Програмування на C++</li>
+                <li><span>🐍</span> Програмування на Python</li>
+                <li><span>🌐</span> Веб-розробка з HTML</li>
+                <li><span>🎨</span> Веб-розробка з CSS</li>
+                <li><span>🔧</span> Технологія контролю версій Git</li>
             </ul>
         </section>
 
