--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             font-family: 'Arial', sans-serif;
             line-height: 1.6;
             color: #333;
-            background: url('background.jpg') no-repeat center center fixed;
+            background: url('https://cdn.pixabay.com/photo/2015/07/17/22/43/student-849825_1280.jpg') no-repeat center center fixed;
             background-size: cover;
             display: flex;
             justify-content: center;
@@ -67,8 +67,9 @@
             align-items: center;
             margin-bottom: 8px;
         }
-        ul li span {
-            font-size: 24px;
+        ul li img {
+            width: 24px;
+            height: 24px;
             margin-right: 10px;
         }
         footer {
@@ -103,11 +104,11 @@
         <section>
             <h2>Навички</h2>
             <ul>
-                <li><span>🔹</span> Програмування на C++</li>
-                <li><span>🐍</span> Програмування на Python</li>
-                <li><span>🌐</span> Веб-розробка з HTML</li>
-                <li><span>🎨</span> Веб-розробка з CSS</li>
-                <li><span>🔧</span> Технологія контролю версій Git</li>
+                <li><img src="https://upload.wikimedia.org/wikipedia/commons/1/18/ISO_C%2B%2B_Logo.svg" alt="C++">Програмування на C++</li>
+                <li><img src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Python-logo-notext.svg" alt="Python">Програмування на Python</li>
+                <li><img src="https://upload.wikimedia.org/wikipedia/commons/6/61/HTML5_logo_and_wordmark.svg" alt="HTML">Веб-розробка з HTML</li>
+                <li><img src="https://upload.wikimedia.org/wikipedia/commons/d/d5/CSS3_logo_and_wordmark.svg" alt="CSS">Веб-розробка з CSS</li>
+                <li><img src="https://upload.wikimedia.org/wikipedia/commons/3/3f/Git_icon.svg" alt="Git">Технологія контролю версій Git</li>
             </ul>
         </section>
 
